Sec9_Chap64-Security Expression Based Syntax: Pierrot optimizations